# raytracer

./: .gitignore  Cargo.toml  image.ppm
src/: main.rs
src/lib/: camera.rs  color.rs  hittable.rs  lib.rs  ray.rs  utils.rs  vec3.rs
src/lib/hittables/: hittable.rs  hittable_list.rs  mod.rs
src/lib/hittables/shapes/: sphere.rs
tests/: ray_tests.rs  vec3_tests.rs
