[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/lib.rs"

[profile.dev]
opt-level = 1

[profile.release]
debug = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
